[gd_scene load_steps=10 format=2]

[ext_resource path="res://Shooter.gd" type="Script" id=1]
[ext_resource path="res://WO84-wu-X1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.05139

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.38512
height = 4.14593

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.45363
height = 4.12945

[sub_resource type="CircleShape2D" id=4]
radius = 9.10206

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.4375
height = 5.93999

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.68388
height = 5.37574

[sub_resource type="CircleShape2D" id=7]
radius = 103.162

[node name="Shooter" type="KinematicBody2D" groups=[
"Shooter",
]]
script = ExtResource( 1 )

[node name="WO84-wu-X1" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.91971, -0.000283003 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 5.73858, -3.76355 )
rotation = 1.94604
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 5.739, 3.598 )
rotation = 1.19555
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 15, 0 )

[node name="DamageBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( -1.92, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 5.739, -3.764 )
rotation = 1.94604
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 5.739, 3.598 )
rotation = 1.19555
shape = SubResource( 6 )

[node name="Shooter_Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="Area2D"]
rotation = -1.5708
scale = Vector2( 1, 1.78 )

[connection signal="timeout" from="Shooter_Timer" to="." method="_on_Shooter_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
